<resources>
    <string name="app_name">Population stat</string>
    <string name="welcome">Welcome</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="update">Update</string>
    <string name="new_password">New Password:</string>
    <string name="confirm_new_password">Confirm New Password:</string>
    <string name="remember_me">Remember Me</string>
    <string name="log_in">Log In</string>
    <string name="login_email">Email</string>
    <string name="password">Password</string>
    <string name="welcome2">WELCOME</string>
    <string name="sign_up">sign up</string>
    <string name="or">OR</string>
     <string name="textview">TextView</string>
    <string name="no_email">No Email</string>
    <string name="no_last_name">No Last Name</string>
    <string name="no_first_name">No First Name</string>
    <string name="address2">Address</string>
    <string name="first_name2">First Name</string>
    <string name="last_name2">Last Name</string>
    <string name="confirm">Confirm</string>
    <string name="name">Name:</string>
   <string name="number_of_people">Number of people:</string>
      <string name="sign_up2">Sign Up</string>
    <string name="signupinfo">please fill the fields to create your acount!</string>
    <string name="dashedline">----------------------------------------------------------------------------------------------------------------</string>
     <string name="lastname">LastName</string>
    <string name="confirm_password2">Confirm Password</string>
    <string name="email2">Email</string>
    <string name="sign_up3">Sign Up</string>
    <string name="firstname">FirstName</string>
    <string name="password2">Password</string>

    <string name="phone_number2">Phone Number</string>

    <string name="or2">OR</string>
    <string name="log_in2">Log In</string>
    <array name="Country_Code">
        <item>PS</item>

    </array>


</resources>