<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue"
    >


    <EditText
        android:id="@+id/lastName2"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#70BEC6CC"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="textEmailAddress"
        android:textColor="@color/end_main_menu_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email1" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="373dp"
        android:layout_height="59dp"
        android:layout_marginTop="36dp"

        android:backgroundTint="#70E2EFFA"
        android:ems="10"
        android:hint="@string/confirm_password2"
        android:inputType="textPassword"
        android:textColor="@color/start_main_menu_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/email"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#88DFE3E6"
        android:ems="10"
        android:hint="@string/email2"
        android:inputType="textEmailAddress"
        android:textColor="@color/end_main_menu_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName2" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="257dp"
        android:layout_height="49dp"
        android:background="@drawable/loginbackground"
        android:backgroundTint="#9E2F3567"
        android:onClick="signUp"
        android:rotationX="32"

        android:text="@string/sign_up3"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.816" />

    <EditText
        android:id="@+id/email1"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="#7025547A"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textEmailAddress"
        android:textColor="@color/end_main_menu_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/password"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#689FAFC5"
        android:ems="10"
        android:hint="@string/password2"
        android:inputType="textPassword"
        android:textColor="@color/end_main_menu_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/logIn"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:backgroundTint="#367D8F"
        android:bottomLeftRadius="15dp"
        android:bottomRightRadius="15dp"
        android:onClick="login"
        android:text="@string/log_in2"
        android:topLeftRadius="15dp"
        android:topRightRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn"
        app:layout_constraintVertical_bias="0.847" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="92dp"
        android:layout_height="60dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#090606"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn"
        app:layout_constraintVertical_bias="0.786"
        app:srcCompat="?attr/actionModePasteDrawable"

        />

    <TextView

        android:id="@+id/textView4"
        android:layout_width="33dp"
        android:layout_height="22dp"
        android:background="#002B94C5"
        android:text="@string/or2"
        android:textAlignment="center"
        android:textColor="#F4F1F1"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="409dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up2"
        android:textAlignment="center"
        android:textColor="@color/end_main_menu_gradient"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signupinfo"
        android:textColor="@color/end_main_menu_gradient"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/email1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="395dp"
        android:layout_height="15dp"
        android:text="@string/dashedline"
        android:textColor="@color/end_main_menu_gradient"
        app:layout_constraintBottom_toTopOf="@+id/email1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.521" />

    <TextView
        android:id="@+id/errorM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/signIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>